add amount of notes

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,6 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>光慧水煎包(梧棲店)</title>
-
-    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    
   </head>
   <body>
     <noscript>
@@ -18,6 +15,9 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <!-- swiper效果 -->
+  <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+  <!-- 滑動動畫效果 -->
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
