--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@
   <!-- 滑動動畫效果 -->
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init();
+      AOS.init({
+        offset:100,
+        duration:1000,
+        once:true,
+      });
     </script>
 </html>
