--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       AOS.init({
         offset:100,
         duration:1000,
-        once:true,
+        once:false,
       });
     </script>
 </html>
