swiper gallery update

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="水煎包，梧棲小吃，光慧水煎包，梧棲店"> -->
     <link rel="icon" href="<%= BASE_URL %>guanghui.ico">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <title>光慧水煎包(梧棲店)</title>
   </head>
   <body>
@@ -20,7 +21,6 @@
     <!-- built files will be auto injected -->
   </body>
   <!-- swiper效果 -->
-  <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
   <!-- 滑動動畫效果 -->
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
