--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       AOS.init({
         offset:100,
         duration:1000,
-        once:false,
+        once:true,
       });
       AOS.refresh();
     </script>
