--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,31 @@
     <meta name="keywords" content="水煎包，梧棲小吃，光慧水煎包，梧棲店"> -->
     <link rel="icon" href="<%= BASE_URL %>guanghui.ico">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    /> -->
     <title>光慧水煎包(梧棲店)</title>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+    <!-- 滑動動畫效果 -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    
   </head>
   <body>
     <noscript>
@@ -19,14 +43,12 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
-  <!-- 滑動動畫效果 -->
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init({
-        offset:100,
-        duration:1000,
-        once:true,
-      });
-      AOS.refresh();
-    </script>
+  <script>
+    AOS.init({
+      offset:100,
+      duration:1000,
+      once:true,
+    });
+    AOS.refresh();
+  </script>
 </html>
