update: python search comments, popup windows

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="google-site-verification" content="yDS8zFpcWA4NeybVmE2FL-w1y4fMIu5Lvn9lLfey9A4" />
     <meta name="description" content="光慧水煎包梧棲分店開幕於2021年10月初，傳承自於50年的老店--草屯光慧水煎包，
     口味有竹筍、高麗菜、冬粉三種(素食可食)，每一顆都是新鮮出爐，給客人最溫暖的點心">
-    <meta name="keywords" content="水煎包，梧棲小吃，光慧水煎包，梧棲店">
+    <meta name="keywords" content="水煎包，梧棲小吃，光慧水煎包，梧棲店，梧棲>">
     <link rel="icon" href="<%= BASE_URL %>guanghui.ico">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>光慧水煎包(梧棲店)</title>
